CSS bug fix causing headshot.png to stretch in Safari mobile browsers

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ ul.collection {
 #headshot-div {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
 
 #headshot--img {
